<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="leptonica_title"><a href="http://www.leptonica.com/">leptonica</a></string>   
    <string name="leptonica_summary">Leptonica is a pedagogically-oriented open source site containing software that is broadly useful for image processing and image analysis applications.</string>   
    <string name="tesseract_ocr_title"><a href="https://code.google.com/p/tesseract-ocr/">tesseract-ocr</a></string>   
    <string name="tesseract_ocr_summary">Tesseract is probably the most accurate open source OCR engine available.</string>   
    <string name="download_failed">Downloading of %1$s failed!</string>
    <string name="language_downloaded">%1$s language data downloaded</string>
    <string name="app_name">Text Fairy</string>
    <string name="tips">Tips</string>
    <string name="ocr_language_delete">delete</string>
    <string name="download_title">Language data for %s</string>
    <string name="ocr_language_title">Choose OCR Language</string>
    <string name="pref_summary_license">Learn about the software used by Textfairy</string>
    <string name="pref_summary_contact">Learn about the creator and supply feedback</string>
    <string name="pref_summary_default_ocr_lang">Download and manage languages for text recognition.</string>
    <string name="pref_title_default_ocr_lang">Default OCR language</string>
    <string name="pref_title_help">Show tips</string>
    <string name="pref_title_contact">Contact information</string>
    <string name="pref_title_license">Licence info</string>
    <string name="pref_summary_help">Tips for improving the optical character recognition (OCR)</string>
    <string name="error_create_file">I\'m sorry but was not able to store your photo on the SD card.</string>
    <string name="share_subject">scanned text</string>
    <string name="save_success">Save successful</string>
    <string name="save_fail">Save failed!</string>
    <string name="share_chooser_title">Select how you want to share the text</string>
    <string name="progress_start">starting OCR Process</string>
    <string name="download_language">download</string>
    <string name="progress_dewarp">Straightening text</string>
    <string name="progress_ocr">Optical character recognition in progress</string>
    <string name="delete">Delete </string>
    <string name="edit_title">Change title</string>
    <string name="cancel">Cancel</string>
    <string name="edit_dialog_title">Enter a title for your document</string>
    <string name="delete_error">Sorry I could not delete this document</string>
    <string name="empty" />
    <string name="cropping_image">Cropping image</string>
    <string name="error_title">Error</string>
    <string name="error_load_file">I\'m sorry but I was not able to find the file. Maybe it was deleted?</string>
    <string name="pdf_creation_message">Creating  your PDF!</string>
    <string name="option_view_mode">switch view</string>
    <string name="document_layout_dialog">What shall I do?</string>
    <string name="layout_complex">Scan multiple columns of text</string>
    <string name="layout_simple">Scan a single column of text</string>
    <string name="saving_document">Saving Document</string>
    <string name="button_column_pick_completed">start text recognition</string>
    <string name="export_as_pdf">Export text</string>
    <string name="delete_language_title">Delete language?</string>
    <string name="delete_language_message">You\'ll free up %1$d kb.</string>
    <string name="delete_dialog_message">Deleting Documents..</string>
    <string name="progress_pfd_creation">Creating page %1$d/%2$d for %3$s.</string>
    <string name="option_text">text settings</string>
    <string name="option_content">table of content</string>
    <string name="option_line_spacing">line spacing</string>
    <string name="option_text_alignment">text alignment</string>
    <string name="options_preview_text">This is a preview of your current text settings. Press the back key to continue reading.\n Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</string>
    <string name="progress_analyse_layout">I\'m analysing the layout. Please wait some seconds.</string>
    <string name="progress_image_detection">Searching for text</string>
    <string name="progress_assemble_pix">I\'m assembling the final picture now.</string>
    <string name="progress_choose_columns">Please choose the text and images you want in the final document</string>
    <string name="new_photo">new photo</string>
    <string name="no_sd_card">No SD card mounted. Is the phone connected to your pc? If so please remove it and try again.</string>
    <string name="rotate_right">rotate right</string>
    <string name="rotate_left">rotate left</string>
    <string name="content_description_fairy">the helpful text fairy</string>
    <string name="crop_title">Choose image section</string>
    <string name="text_options_title">change your text settings</string>
    <string name="app_options_title">Change your settings</string>
    <string name="edit_title_hint">enter a title</string>
    <string name="option_gallery_title">pick an image from the gallery</string>
    <string name="option_camera_title">make a new photo</string>
    <string name="option_preference_title">preferences</string>
    <string name="show_tips">show tips</string>
    <string name="help_section">Help section</string>
    <string name="document_help_title">You can manage your document here.</string>
    <string name="fairy_welcome_bubble">I\'m the Text Fairy</string>
    <string name="new_photo_gallery">pick gallery photo</string>
    <string name="show_documents">manage documents</string>
    <string name="join">join</string>
    <string name="join_documents_title">Joining Documents</string>
    <string name="join_documents_result">%1$d documents joined</string>
    <string name="start_app">let\'s go</string>
    <string name="install_error_disk_space">Not enough disk space. You need to free  %1$d MB on your SD card</string>
    <string name="install_error">Could not install configuration files.</string>
    <string name="toc_title">table of contents</string>
    <string name="start_text_1">Was ich kann!..</string>
    <string name="start_text_2">Ich extrahiere für dich Texte aus Bilddateien und mache sie editierbar. Tippe mich an, um mehr zu erfahren(…, &#8230;)</string>
    <string name="start_text_3">Erstelle ein neues Foto oder wähle ein Foto aus deiner Galerie aus(…, &#8230;)</string>
    <string name="start_text_4">Wähle einen Bildausschnitt aus und entscheide, ob du eine oder mehrere Spalten (z.B. Zeitungsartikel) gescannt haben möchtest(…, &#8230;)</string>
    <string name="start_text_5">Speichere und fertig ist deine Textdatei. Du kannst sie auf deiner SD-Karte finden oder direkt von mir als PDF versenden lassen(…, &#8230;)</string>
    <string name="start_text_6">Probier es aus. Ich helfe dir, falls du Fragen hast…</string>
    <string name="start_text_7"> (…, &#8230;) und vergiss nicht:  Auch Androiden sind nicht perfekt. Nicht jedes Bild lässt sich in Textformate umwandeln(…, &#8230;)</string>
    <string name="start_text_8">Aber ich gebe dir immer Tipps, damit es klappt(…, &#8230;)</string>
    <string name="start_text_9">What is a robot’s favorite type of music?</string>
    <string name="start_text_10">Heavy metal!</string>
    <string name="start_text_11">Willst du mir schreiben? Verbesserungsvorschläge gerne an: Jeanne Wellnitz</string>
    <string name="start_text_12">Two bytes meet.  The first byte asks, “Are you ill?” The second byte replies..</string>
    <string name="start_text_13">“No, just feeling a bit off.”</string>
    <string name="start_text_14">There are two ways to write error-free computer programs</string>
    <string name="start_text_15">only the third one works.</string>
    <string name="start_text_16">In the beginning God created the Bit and the Byte.</string>
    <string name="start_text_17">And from those he created the Word.</string>
    <string name="start_text_18">Lawyers are safe from the threat of automation taking over their professions.</string>
    <string name="start_text_19">No one would build a robot to do nothing.</string>
    <string name="start_text_20">A robot walks into a bar.</string>
    <string name="start_text_21">He looks at the bartender and says "Can I get a screwdriver?"</string>
    <string name="document_list_help_title">Here you can manage your scanned documents</string>
    <string name="toc_help_title">Here you see a list of all pages in the document</string>
    <string name="no_ocr">No ocr. Save image unchanged.</string>
    <string name="crop_help_title">You can crop and rotate your photo now</string>
    <string name="continue_ocr">continue</string>
    <string name="default_ocr_language">eng</string>
    <string name="title_activity_contact">Contact</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>